[gonzalo][fix it the horizontal scroll done for the welcome box

--- a/css/style.css
+++ b/css/style.css
@@ -1346,12 +1346,37 @@ body {
   background: none;
   border: none;
 }
-@media all and (min-width: 320px) and (max-width: 480px) {
+@media all and (min-width: 20rem) and (max-width: 30rem) {
   .welcome {
     bottom: 10%;
     width: 100%;
     height: 40vh;
-    left: 50%;
+    left: 20%;
+  }
+  .welcome label {
+    font-size: 0.5rem;
+  }
+  .welcome button {
+    font-size: 0.6em;
+    width: 30%;
+    padding: 0.5em;
+    margin: 1rem auto 1rem auto;
+  }
+  .welcome input {
+    width: 100%;
+    font-size: 0.8rem;
+    margin: 2.5rem auto 1rem auto;
+  }
+}
+@media all and (min-width: 30rem) and (max-width: 48rem) {
+  .welcome {
+    bottom: 20%;
+    width: 100%;
+    height: 40vh;
+    left: 20%;
+  }
+  .welcome label {
+    font-size: 0.6rem;
   }
   .welcome button {
     font-size: 0.8em;
@@ -1365,31 +1390,15 @@ body {
     margin: 2.5rem auto 1rem auto;
   }
 }
-@media all and (min-width: 480px) and (max-width: 768px) {
+@media all and (min-width: 48rem) and (max-width: 60rem) {
   .welcome {
     bottom: 20%;
     width: 100%;
     height: 40vh;
-    left: 50%;
+    left: 20%;
   }
-  .welcome button {
-    font-size: 0.8em;
-    width: 30%;
-    padding: 0.5em;
-    margin: 1rem auto 1rem auto;
-  }
-  .welcome input {
-    width: 100%;
-    font-size: 0.6rem;
-    margin: 2.5rem auto 1rem auto;
-  }
-}
-@media all and (min-width: 768px) and (max-width: 920px) {
-  .welcome {
-    bottom: 20%;
-    width: 100%;
-    height: 40vh;
-    left: 30%;
+  .welcome label {
+    font-size: 0.8rem;
   }
   .welcome button {
     font-size: 0.8em;
