--- a/scss/components/event.scss
+++ b/scss/components/event.scss
@@ -55,29 +55,35 @@
         }
     }
 
-    @media all and (min-width: 320px) and (max-width: 480px) {
+    @media all and (min-width: 20rem) and (max-width: 30rem) {
             bottom: 10%;
             width: 100%;
             height: 40vh;
-            left: 50%;
+            left: 20%;
+                label {
+                    font-size: .5rem;
+    }
             button {
-                font-size: 0.8em;
+                font-size: 0.6em;
                 width: 30%;
                 padding: 0.5em;
                 margin: 1rem auto 1rem auto;
             }
             input {
             width: 100%;
-            font-size: 0.6rem;
+            font-size: 0.8rem;
             margin: 2.5rem auto 1rem auto;
         }
     }
 
-    @media all and (min-width: 480px) and (max-width: 768px) {
+    @media all and (min-width: 30rem) and (max-width: 48rem) {
         bottom: 20%;
         width: 100%;
         height: 40vh;
-        left: 50%;
+        left: 20%;
+        label {
+            font-size: .6rem;
+}
         button {
             font-size: 0.8em;
             width: 30%;
@@ -91,11 +97,14 @@
     }
     }
 
-    @media all and (min-width: 768px) and (max-width: 920px) {
+    @media all and (min-width: 48rem) and (max-width: 60rem) {
         bottom: 20%;
         width: 100%;
         height: 40vh;
-        left: 30%;
+        left: 20%;
+        label {
+            font-size: .8rem;
+}
         button {
             font-size: 0.8em;
             width: 30%;
